--- a/index.html
+++ b/index.html
@@ -29,44 +29,42 @@
         <div class="first">
           <label for="first-name">First Name <sup>*</sup></label>
           <input type="text" id="first-name">
-          <div class="error"></div>
+          <div class="error-message"></div>
         </div>
         <div class="last">
           <label for="last-name">Last Name<sup>*</sup></label>
           <input type="text" id="last-name">
-          <div class="error"></div>
+          <div class="error-message"></div>
         </div>
       </div>
 
       <div class="group">
         <label for="e-mail">Email Address<sup>*</sup></label>
         <input type="email" id="e-mail">
-        <div class="error"></div>
+        <div class="error-message"></div>
       </div>
-      <!-- This field is required -->
       <label for="check">Query Type<sup>*</sup></label>
       <div class="radio-group group">
         <div class="radio-one">
-          <input type="radio" name="type" id="type-1"><label for="type-1">General Enquiry</label>
+          <input  type="radio" name="type" id="type-1"><label for="type-1">General Enquiry</label>
         </div>
         <div class="radio-two">
           <input type="radio" name="type" id="type-2">
           <label for="type-2">Support Request</label>
-          <div class="error"></div>
         </div>
+        <div class="error-message"></div>
       </div>
 
       <div class="group">
         <label for="message">Message<sup>*</sup></label>
         <textarea name="message" id="message"></textarea>
-        <div class="error">This field is required</div>
+        <div class="error-message"></div>
       </div>
 
       <div class="group">
-        <input type="checkbox">
-        <p>I consent to being contacted by the team</p>
-        <div class="error"></div>
-        <!-- To submit this form, please consent to being contacted -->
+        <input type="checkbox" id="check-box">
+        <p>I consent to being contacted by the team<sup>*</sup></p>
+        <div class="error-message"></div>
 
       </div>
 
