little bit balance

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
       </div>
       <label for="check">Query Type<sup>*</sup></label>
       <div class="radio-group group">
-        <div class="radio-one">
+        <div class="radio-one radio">
           <input  type="radio" name="type" id="type-1"><label for="type-1">General Enquiry</label>
         </div>
-        <div class="radio-two">
+        <div class="radio-two radio"> 
           <input type="radio" name="type" id="type-2">
           <label for="type-2">Support Request</label>
         </div>
